--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header nav{
     margin-bottom: 80px;
 }
 
+
 .container{
     max-width: 980px;
     margin: auto;
@@ -65,16 +66,52 @@ nav .container{
 .item{
     padding: 10px;
     flex-basis: 33.3%;
-    position: relative;
 }
 
 .product{
     display: inline-block;
     height: 500px;
+    position: relative;
 }
 
 .product-pic{
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+.img-info{
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    width: 100%;
+    color: white;
+}
+
+.like{
+    font-size: 2.4rem;
+    padding: 8px 15px;
+    position: absolute;
+    top: 20px;
+    right: 0;
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+
+.discount{
+    background-color: red;
+    margin-right: 5px;
+    padding: 5px 10px;
+}
+.material{
+    background-color: green;
+    padding: 5px 10px;
+}
+
+.product-price span, .product-brand{
+    font-size: 14px;
+}
+.discounted{
+    color: red;
+    margin-right: 5px;
 }
