--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,19 @@ body{
 }
 
 header{
+    position: fixed;
+    width: 100%;
+    z-index: 1;
     background-color:#FF6900 ;
 }
 
 header nav{
     padding: 20px 0px;
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
-    margin-bottom: 80px;
+}
+
+main{
+    padding-top: 120px;
 }
 
 
@@ -65,6 +71,7 @@ nav .container{
 
 .item{
     padding: 10px;
+    padding-bottom: 40px;
     flex-basis: 33.3%;
 }
 
